TP-PTSIB/_build/html/reports/essai.log
Traceback (most recent call last):
  File "/Users/darkwell-air/opt/anaconda3/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/darkwell-air/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/darkwell-air/opt/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/darkwell-air/opt/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "/Users/darkwell-air/opt/anaconda3/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/Users/darkwell-air/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 558, in async_execute
    await self.async_execute_cell(
  File "/Users/darkwell-air/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/darkwell-air/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from cowpy import cow
    cheese = cow.Moose()
    msg = cheese.milk("Welcome Bob!")
    print(msg)
------------------

[0;36m  File [0;32m"/var/folders/2c/_2pxcgcx3dg1z0y7lxk7nf080000gn/T/ipykernel_74029/44584775.py"[0;36m, line [0;32m2[0m
[0;31m    cheese = cow.Moose()[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m unexpected indent

IndentationError: unexpected indent (44584775.py, line 2)

